feat: added vendors
